Fixes some css issues with main content background and alignment

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,10 +1,10 @@
 body{background: url("/images/blue_texture.png") repeat; padding: 0; margin:0;}
 
-div#body {}
+div#body {margin: 0; background: url("/images/general_bg.png") no-repeat center 0;}
 
 div#page{margin: 0 auto; padding:0; margin:0; }
 
-div#container {margin: 0 auto; width: 1500px;background: url("/images/general_bg.png") no-repeat 0px -200px;}
+div#container {margin: 0 auto; width: 896px; padding: 5px 0; }
 
 /*HEADER STYLES  -------------------------------------------- */
 div#header_content{background: #000000; width:100%; height:56px;}
